# marimo-investigate

./: .env.example  README.md  assistant-yandex.py  elis_notebook.py  json-schema.json  main.py  pyproject.toml  result.json
adapters/llm/: README.md  __init__.py  cache.py  manager.py  model_registry.py  models.py  rate_limiter.py  retry.py  schemas.py  schemas_original.py
adapters/llm/schemas/: __init__.py  government_docs.py
common/: __init__.py  cache_utils.py  chunking.py  document_reader.py  exceptions.py  file_utils.py  json_utils.py  llm_utils.py  logging.py  ocel.py  ruff.toml  schema_utils.py  time_utils.py  types.py
input-docs/: .~lock.НП Семья.docx#  НП Семья.docx  ФП Жилье GR.docx  ФП Многодетная семья GR 12.01.2025.docx  ФП Поддержка семьи GR 12.01.2026.docx
output/: NP_life_infrastructure.json  nprj_family.json  nprj_family_2.json  result_pure.json  sample_doc_20260223_205229.json  sample_doc_20260223_213108.json
prompts/: national-prj_system.md  national-prj_user.md
test_docs/: sample_doc.txt
