[project]
name = "marimo-investigate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.20.2",
    "mcp>=1.26.0",
    "neo4j>=6.1.0",
    "pandas>=3.0.1",
    "pydantic-ai[examples]>=1.62.0",
    "requests>=2.32.5",
    "ruff>=0.15.2",
    "yandex-cloud-ml-sdk>=0.19.1",
]
